kubernetes/apps/base/games/minecraft/mc-router/tcproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mc-router
spec:
  parentRefs:
    - name: tcp-gateway
      namespace: kube-system
  rules:
    - backendRefs:
        - name: mc-router
          namespace: games
          port: 25565
